--- a/.htaccess
+++ b/.htaccess
@@ -7,4 +7,4 @@
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /~tm4818/ISTE-341/event_manager/index.php?path=$1 [NC,L,QSA]
+RewriteRule ^(.*)$ /tm4818/ISTE-341/event_manager/index.php?path=$1 [NC,L,QSA]
